# github-app-auth

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: release.md
examples/: get_metadata.rs
src/: lib.rs
tests/: get_metadata.rs  get_secrets.rs
