[package]
name = "github-app-auth"
version = "3.0.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2021"
description = "Library for authenticating as a GitHub app"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicholasbishop/github-app-auth"
keywords = ["github", "app", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
chrono = { version = "0.4.19", default_features = false, features = ["clock", "serde"] }
http = { version = "0.2.8", default_features = false }
jsonwebtoken = { version = "8.1.1", default_features = false, features = ["use_pem"] }
log = { version = "0.4.17", default_features = false }
reqwest = { version = "0.11.11", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.138", default_features = false, features = ["derive"] }
thiserror = { version = "1.0.31", default_features = false }

[dev-dependencies]
serde_json = { version = "1.0.82", default_features = false }
simple_logger = { version = "2.1.0", default_features = false }
tokio = { version = "1.19.2", features = ["full"] }
